etc/docker/openshift/phpinfo-istio.yaml
#########################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
#      SPDX-License-Identifier:  GPL-2.0-only                           #
#########################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpinfo-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpinfo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: true
      labels:
        app: phpinfo
    spec:
      containers:
      -
        image: secobau/phpinfo:latest
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
        name: phpinfo-container
        ports:
          -
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 1
        resources:
          limits:
            cpu: '0.001'
            memory: '32Mi'
          requests:
            cpu: '0.001'
            memory: '16Mi'
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: phpinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - 
      hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpinfo
  name: phpinfo-svc
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: phpinfo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: phpinfo-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - phpinfo-gateway
  http:
    - 
      match:
        - uri:
            exact: /index.php
      route:
        - destination:
            host: phpinfo-svc
            port:
              number: 80
